# citygml-convert-tools

./: .gitignore  .gitmodules  CHANGELOG.md  GEOMEMO.md  LICENSE  README.md  cct.py  main.py  pyproject.toml
3dmodel_viewer/: READMD.md
3dmodel_viewer/3dtiles/: index.html  main.js  style.css
3dmodel_viewer/geojson/: index.html  main.js  style.css
citygml2geojson/: README.md  building.py  city_gml.py  main.py
citygml2obj/: appearance.py  bounded_by.py  building.py  city_model.py  citygml2obj.py  common.py
citygml2ply/: README.md  building.py  city_gml.py  main.py
citygml2ply/tests/: test_transform_coordinate.py
py_plateau/: building.py  city_gml.py
tests/: conftest.py  test_geojson.py  test_ply.py  test_poly_and_poly_id.py  test_textures.py  test_transform_coordinate.py
tests/answer/: 53392633_bldg_4326_lod0.geojson  53392633_bldg_4326_lod0_00.geojson  53392633_bldg_4326_lod0_01.geojson  53392633_bldg_4326_lod0_02.geojson  53392633_bldg_4326_lod0_03.geojson  53392633_bldg_4326_lod0_04.geojson  53392633_bldg_4326_lod0_05.geojson  53392633_bldg_4326_lod0_06.geojson  53392633_bldg_4326_lod0_07.geojson  53392633_bldg_4326_lod0_08.geojson  53392633_bldg_4326_lod0_09.geojson  53392633_bldg_4326_lod1.geojson  53392633_bldg_4326_lod1_00.geojson  53392633_bldg_4326_lod1_01.geojson  53392633_bldg_4326_lod1_02.geojson  53392633_bldg_4326_lod1_03.geojson  53392633_bldg_4326_lod1_04.geojson  53392633_bldg_4326_lod1_05.geojson  53392633_bldg_4326_lod1_06.geojson  53392633_bldg_4326_lod1_07.geojson  53392633_bldg_4326_lod1_08.geojson  53392633_bldg_4326_lod1_09.geojson  53392633_bldg_4326_lod2.geojson  53392633_bldg_4326_lod2_00.geojson  53392633_bldg_4326_lod2_01.geojson  53392633_bldg_4326_lod2_02.geojson  53392633_bldg_4326_lod2_03.geojson  53392633_bldg_4326_lod2_04.geojson  53392633_bldg_4326_lod2_05.geojson  53392633_bldg_4326_lod2_06.geojson  53392633_bldg_4326_lod2_07.geojson  53392633_bldg_4326_lod2_08.geojson  53392633_bldg_4326_lod2_09.geojson  53392633_bldg_6677_lod0.ply  53392633_bldg_6677_lod0_00.ply  53392633_bldg_6677_lod0_01.ply  53392633_bldg_6677_lod0_02.ply  53392633_bldg_6677_lod0_03.ply  53392633_bldg_6677_lod0_04.ply  53392633_bldg_6677_lod0_05.ply  (+26 more)
(+1 files in other folders)
